force-app/main/default/objects/RMA__c/RMA__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : It contains the RMA records initiated from Cases</description>
    <label>RMA</label>
    <nameField>
        <displayFormat>RMA#{000000}</displayFormat>
        <label>RMA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>