force-app/main/default/objects/RMA__c/fields/Actual_Date_and_Time_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_and_Time_of_Installation__c</fullName>
    <label>Actual Date and Time of Installation</label>
    <type>DateTime</type>
</CustomField>