force-app/main/default/objects/RMA__c/fields/Actual_Return_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Actual_Return_Part_Number__c</fullName>
    <label>Actual Return Part Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>