force-app/main/default/objects/RMA__c/fields/Actual_Shippedout_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Shippedout_Date__c</fullName>
    <label>Replacement Ship Date</label>
    <type>Date</type>
</CustomField>