force-app/main/default/objects/RMA__c/fields/Case_Open_to_RMA_Create_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_to_RMA_Create_Age_Days__c</fullName>
    <formula>CreatedDate - Case__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Open to RMA Create Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>