force-app/main/default/objects/RMA__c/fields/Case_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Thread_Id__c</fullName>
    <formula>Case__r.Email_Ref_Id__c</formula>
    <label>Case Thread Id</label>
    <type>Text</type>
</CustomField>