force-app/main/default/objects/RMA__c/fields/CE_Dispatch_Request_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CE_Dispatch_Request_Date_Time__c</fullName>
    <label>CE Dispatch Request Date/Time</label>
    <type>DateTime</type>
</CustomField>