force-app/main/default/objects/RMA__c/fields/Communication_Language__c.field-meta.xml
<CustomField>
    <fullName>Communication_Language__c</fullName>
    <label>Communication Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>