force-app/main/default/objects/RMA__c/fields/Community_Case__c.field-meta.xml
<CustomField>
    <fullName>Community_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer RMAs</relationshipLabel>
    <relationshipName>Customer_RMAs</relationshipName>
    <type>Lookup</type>
</CustomField>