force-app/main/default/objects/RMA__c/fields/Complaint_Date__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Date__c</fullName>
    <description>Updated by back end.</description>
    <label>Complaint_Date</label>
    <type>Date</type>
</CustomField>