force-app/main/default/objects/RMA__c/fields/Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Number__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp; Id, Crm_Complaint_Number__c ,&quot;_parent&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Complaint Number</label>
    <type>Text</type>
</CustomField>