force-app/main/default/objects/RMA__c/fields/Completion_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_and_Time__c</fullName>
    <label>Completion Date and Time</label>
    <type>DateTime</type>
</CustomField>