force-app/main/default/objects/RMA__c/fields/Create_FA_Bug__c.field-meta.xml
<CustomField>
    <fullName>Create_FA_Bug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-2204</description>
    <label>Create FA Bug</label>
    <type>Checkbox</type>
</CustomField>