force-app/main/default/objects/RMA__c/fields/Crm_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>Crm_Complaint_Number__c</fullName>
    <label>Crm Complaint Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>