force-app/main/default/objects/RMA__c/fields/Customer_Engineers_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engineers_Email__c</fullName>
    <description>[SDS-2119] Service: Track CE Information on RMA</description>
    <label>Customer Engineer&apos;s Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>