force-app/main/default/objects/RMA__c/fields/Customer_Engineers_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engineers_Phone__c</fullName>
    <description>SDS-2119 Service: Track CE Information on RMA</description>
    <label>Customer Engineer(s) Phone</label>
    <type>Phone</type>
</CustomField>