force-app/main/default/objects/RMA__c/fields/Dead_on_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Dead_on_Arrival__c</fullName>
    <label>Dead on Arrival</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>