force-app/main/default/objects/RMA__c/fields/Delivery_location_type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_location_type__c</fullName>
    <label>Delivery location type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>