force-app/main/default/objects/RMA__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>RMA</relationshipLabel>
    <relationshipName>RMA</relationshipName>
    <type>Lookup</type>
</CustomField>