force-app/main/default/objects/RMA__c/fields/Environment_Profile__c.field-meta.xml
<CustomField>
    <fullName>Environment_Profile__c</fullName>
    <formula>IF (BEGINS(TEXT($User.UserType), &apos;Power&apos;),HYPERLINK( LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp; &quot;s/detail/&quot;&amp;Case__r.Environment_Profile__c, Case__r.Environment_Profile__r.Name ,&quot;_parent&quot; ),HYPERLINK(&quot;/&quot;&amp;Case__r.Environment_Profile__c, Case__r.Environment_Profile__r.Name ,&quot;_parent&quot; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Environment Profile</label>
    <type>Text</type>
</CustomField>