force-app/main/default/objects/RMA__c/fields/Equipment_Location_Address2__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Location_Address2__c</fullName>
    <label>Suite/Bldg#</label>
    <length>10</length>
    <type>Text</type>
</CustomField>