force-app/main/default/objects/RMA__c/fields/FRU_CRU__c.field-meta.xml
<CustomField>
    <fullName>FRU_CRU__c</fullName>
    <label>FRU/CRU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRU</fullName>
            </value>
            <value>
                <fullName>FRU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>