force-app/main/default/objects/RMA__c/fields/Installation_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address_1__c</fullName>
    <label>Installation Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>