force-app/main/default/objects/RMA__c/fields/Installation_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address_2__c</fullName>
    <label>Installation Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>