force-app/main/default/objects/RMA__c/fields/Installation_City_Province__c.field-meta.xml
<CustomField>
    <fullName>Installation_City_Province__c</fullName>
    <label>Installation City/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>