force-app/main/default/objects/RMA__c/fields/Installation_Country__c.field-meta.xml
<CustomField>
    <fullName>Installation_Country__c</fullName>
    <label>Installation Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>