force-app/main/default/objects/RMA__c/fields/Installation_State__c.field-meta.xml
<CustomField>
    <fullName>Installation_State__c</fullName>
    <label>Installation State/Region</label>
    <length>3</length>
    <type>Text</type>
</CustomField>