force-app/main/default/objects/RMA__c/fields/Installation_Successful__c.field-meta.xml
<CustomField>
    <fullName>Installation_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Successful</label>
    <type>Checkbox</type>
</CustomField>