force-app/main/default/objects/RMA__c/fields/Installation_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Installation_Zip_Postal_Code__c</fullName>
    <label>Installation Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>