force-app/main/default/objects/RMA__c/fields/Line_Number_on_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Line_Number_on_Sales_Order__c</fullName>
    <label>Line Number on Sales Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>