force-app/main/default/objects/RMA__c/fields/Location_IF_different_from_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>Location_IF_different_from_ShipTo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location IF different from ShipTo</label>
    <type>Checkbox</type>
</CustomField>