force-app/main/default/objects/RMA__c/fields/Mac_Address__c.field-meta.xml
<CustomField>
    <fullName>Mac_Address__c</fullName>
    <label>Mac Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>