force-app/main/default/objects/RMA__c/fields/NVBug__c.field-meta.xml
<CustomField>
    <fullName>NVBug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FA NVBug</label>
    <referenceTo>NVBug__c</referenceTo>
    <relationshipLabel>RMA</relationshipLabel>
    <relationshipName>RMA</relationshipName>
    <type>Lookup</type>
</CustomField>