force-app/main/default/objects/RMA__c/fields/NVBug_ID__c.field-meta.xml
<CustomField>
    <fullName>NVBug_ID__c</fullName>
    <label>NVBug ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>