force-app/main/default/objects/RMA__c/fields/NVIDIA_Part_Description__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_Part_Description__c</fullName>
    <label>Return Part Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>