force-app/main/default/objects/RMA__c/fields/NVIDIA_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_Part_Number__c</fullName>
    <label>RMA Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>