force-app/main/default/objects/RMA__c/fields/On_site_Contact1_Email__c.field-meta.xml
<CustomField>
    <fullName>On_site_Contact1_Email__c</fullName>
    <label>On-site Contact Email</label>
    <type>Email</type>
</CustomField>