force-app/main/default/objects/RMA__c/fields/On_site_Contact1_Name__c.field-meta.xml
<CustomField>
    <fullName>On_site_Contact1_Name__c</fullName>
    <label>On-site Contact Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>