force-app/main/default/objects/RMA__c/fields/On_site_Contact1_Phone__c.field-meta.xml
<CustomField>
    <fullName>On_site_Contact1_Phone__c</fullName>
    <label>On-site Contact Phone</label>
    <type>Phone</type>
</CustomField>