force-app/main/default/objects/RMA__c/fields/On_site_Contact2_Name__c.field-meta.xml
<CustomField>
    <fullName>On_site_Contact2_Name__c</fullName>
    <label>Installation Contact Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>