force-app/main/default/objects/RMA__c/fields/On_site_Engineer_s__c.field-meta.xml
<CustomField>
    <fullName>On_site_Engineer_s__c</fullName>
    <label>Customer Engineer(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>