force-app/main/default/objects/RMA__c/fields/Onsite_Contact2_Email__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact2_Email__c</fullName>
    <label>Installation Contact Email</label>
    <type>Email</type>
</CustomField>