force-app/main/default/objects/RMA__c/fields/Opening_hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_hours__c</fullName>
    <label>Opening hours</label>
    <length>50</length>
    <type>Text</type>
</CustomField>