force-app/main/default/objects/RMA__c/fields/Over_45_Days_Justification__c.field-meta.xml
<CustomField>
    <fullName>Over_45_Days_Justification__c</fullName>
    <label>Over 45 Days Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>