force-app/main/default/objects/RMA__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>RMA</relationshipLabel>
    <relationshipName>RMA</relationshipName>
    <type>Lookup</type>
</CustomField>