force-app/main/default/objects/RMA__c/fields/Planned_ShipoutDate__c.field-meta.xml
<CustomField>
    <fullName>Planned_ShipoutDate__c</fullName>
    <label>Planned ShipoutDate</label>
    <type>Date</type>
</CustomField>