force-app/main/default/objects/RMA__c/fields/Reason_ForRejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_ForRejection__c</fullName>
    <label>Reason ForRejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>