force-app/main/default/objects/RMA__c/fields/Replacement_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Serial_Number__c</fullName>
    <label>Replacement Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>