force-app/main/default/objects/RMA__c/fields/Replacement_Type__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Type__c</fullName>
    <label>Replacement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RMAReplacement_Type</valueSetName>
    </valueSet>
</CustomField>