force-app/main/default/objects/RMA__c/fields/Request_CE_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Request_CE_Dispatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CE Dispatch Requested</label>
    <type>Checkbox</type>
</CustomField>