force-app/main/default/objects/RMA__c/fields/Request_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Created_Date__c</fullName>
    <label>Request Created Date</label>
    <type>Date</type>
</CustomField>