force-app/main/default/objects/RMA__c/fields/Reship_Date__c.field-meta.xml
<CustomField>
    <fullName>Reship_Date__c</fullName>
    <description>This field is being used in integration between SFDC and SAP</description>
    <label>Reship Date</label>
    <type>Date</type>
</CustomField>