force-app/main/default/objects/RMA__c/fields/Reship_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Reship_Part_Number__c</fullName>
    <label>Reship Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>