force-app/main/default/objects/RMA__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <description>This field is being used for integration between SFDC and SAP</description>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>