force-app/main/default/objects/RMA__c/fields/Returned_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Returned_Serial_Number__c</fullName>
    <label>Returned Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>