force-app/main/default/objects/RMA__c/fields/RMA_Count__c.field-meta.xml
<CustomField>
    <fullName>RMA_Count__c</fullName>
    <description>To count up the number of RMA records</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To count up the number of RMA records</inlineHelpText>
    <label>RMA Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>