force-app/main/default/objects/RMA__c/fields/RMA_Open_to_RMA_Complete_Days__c.field-meta.xml
<CustomField>
    <fullName>RMA_Open_to_RMA_Complete_Days__c</fullName>
    <formula>IF(isblank(Completion_Date_and_Time__c),0, (Completion_Date_and_Time__c - CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Open to RMA Complete (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>