force-app/main/default/objects/RMA__c/fields/RMA_Status__c.field-meta.xml
<CustomField>
    <fullName>RMA_Status__c</fullName>
    <label>RMA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>