force-app/main/default/objects/RMA__c/fields/RMA_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>RMA_Status_Formula__c</fullName>
    <formula>IF( RMA_Status__c == &apos;INPR&apos;, &apos;In-Progress&apos;, IF( RMA_Status__c == &apos;SHIP&apos;,&apos;Shipped&apos;,IF( RMA_Status__c == &apos;COMP&apos;,&apos;Return Complete&apos;,&apos;Open&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Status</label>
    <type>Text</type>
</CustomField>