force-app/main/default/objects/RMA__c/fields/RMA_to_Case_Closed_Days__c.field-meta.xml
<CustomField>
    <fullName>RMA_to_Case_Closed_Days__c</fullName>
    <formula>IF(Case__r.IsClosed, (Case__r.ClosedDate - CreatedDate), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA to Case Closed (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>