force-app/main/default/objects/RMA__c/fields/Sales_Order_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Creation_Date__c</fullName>
    <label>Sales Order Creation Date</label>
    <type>Date</type>
</CustomField>