force-app/main/default/objects/RMA__c/fields/SAP_CalloutMessage__c.field-meta.xml
<CustomField>
    <fullName>SAP_CalloutMessage__c</fullName>
    <description>Used to record message for last callout. Should not be on layout</description>
    <label>SAP_CalloutMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>