force-app/main/default/objects/RMA__c/fields/SAP_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Message_ID__c</fullName>
    <label>SAP_Message_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>