force-app/main/default/objects/RMA__c/fields/SAP_RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_RMA_Number__c</fullName>
    <label>RMA Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>