force-app/main/default/objects/RMA__c/fields/Scheduled_Date_and_Time_for_Installation__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_and_Time_for_Installation__c</fullName>
    <label>Scheduled Date and Time for Installation</label>
    <type>DateTime</type>
</CustomField>