force-app/main/default/objects/RMA__c/fields/Service_Field_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>Service_Field_Guide_URL__c</fullName>
    <formula>Part__r.Service_Field_Guide_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Field Guide URL</label>
    <type>Text</type>
</CustomField>