force-app/main/default/objects/RMA__c/fields/Service_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Service_Instructions__c</fullName>
    <label>Service Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>