force-app/main/default/objects/RMA__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <label>Service Request</label>
    <length>30</length>
    <type>Text</type>
</CustomField>