force-app/main/default/objects/RMA__c/fields/Ship_Tel_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ship_Tel_Phone__c</fullName>
    <label>ShipTo Phone</label>
    <type>Phone</type>
</CustomField>