force-app/main/default/objects/RMA__c/fields/Shipment_TrackingNumber_Url__c.field-meta.xml
<CustomField>
    <fullName>Shipment_TrackingNumber_Url__c</fullName>
    <label>Shipment TrackingNumber Url</label>
    <type>Url</type>
</CustomField>