force-app/main/default/objects/RMA__c/fields/ShipTo_Email__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Email__c</fullName>
    <label>ShipTo Email</label>
    <type>Email</type>
</CustomField>