force-app/main/default/objects/RMA__c/fields/ShipTo_Name1__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Name1__c</fullName>
    <label>ShipTo Name1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>