force-app/main/default/objects/RMA__c/fields/ShipTo_Name2__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Name2__c</fullName>
    <label>ShipTo Name2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>