force-app/main/default/objects/RMA__c/fields/Special_Instructions_for_CE__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_for_CE__c</fullName>
    <label>Special Instructions for CE</label>
    <length>64768</length>
    <type>LongTextArea</type>
</CustomField>