force-app/main/default/objects/RMA__c/fields/Special_Instructions_to_RMA_Team__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_to_RMA_Team__c</fullName>
    <label>Special Instructions to RMA Team</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>