force-app/main/default/objects/RMA__c/fields/Special_Shipping_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Shipping_Instructions__c</fullName>
    <label>Special Shipping Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>