force-app/main/default/objects/RMA__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State/Region</label>
    <length>3</length>
    <type>Text</type>
</CustomField>