force-app/main/default/objects/RMA__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>