force-app/main/default/objects/RMA__c/fields/Summary_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Installation__c</fullName>
    <label>Summary of Installation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>