force-app/main/default/objects/RMA__c/fields/Tracking_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number_Formula__c</fullName>
    <formula>IF( OR(CONTAINS(Shipping_Carrier__c , &quot;FedEx&quot;),CONTAINS(Shipping_Carrier__c , &quot;FEDEX&quot;)), 
HYPERLINK( &quot;https://www.fedex.com/fedextrack/?tracknumbers=&quot;&amp;Tracking_Number__c, &apos;Track My Package&apos; ), 
IF(AND(CONTAINS(Shipping_Carrier__c , &quot;UPS&quot;), BEGINS( Tracking_Number__c , &quot;1Z&quot;)), 
HYPERLINK( &quot;https://www.ups.com/track?loc=en_US&amp;tracknum=&quot;&amp;Tracking_Number__c, &apos;Track My Package&apos; ), 
IF(CONTAINS(Shipping_Carrier__c , &quot;DHL&quot;), 
HYPERLINK( &quot;http://webtrack.dhlglobalmail.com/?trackingnumber=&quot;&amp;Tracking_Number__c, &apos;Track My Package&apos; ), 
IF (BEGINS(TEXT($User.UserType), &apos;Power&apos;),HYPERLINK( LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp; &quot;s/contact-carrier-website&quot;, &apos;Track My Package&apos; ,&quot;_parent&quot; ),&apos;&apos; )
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking Link</label>
    <type>Text</type>
</CustomField>