force-app/main/default/objects/RMA__c/fields/User_Guide__c.field-meta.xml
<CustomField>
    <fullName>User_Guide__c</fullName>
    <formula>Case__r.Entitlement.Service_Product__r.User_Guide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Guide</label>
    <type>Text</type>
</CustomField>