force-app/main/default/objects/RMA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Crm_Complaint_Number__c</columns>
    <columns>SAP_RMA_Number__c</columns>
    <columns>Case__c</columns>
    <columns>NVIDIA_Part_Number__c</columns>
    <columns>Reship_Part_Number__c</columns>
    <columns>Replacement_Serial_Number__c</columns>
    <columns>Shipping_Carrier__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Tracking_Number_Formula__c</columns>
    <columns>RMA_Status__c</columns>
    <columns>Entitlement__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>