force-app/main/default/objects/RMA__c/listViews/All_Temp.listView-meta.xml
<ListView>
    <fullName>All_Temp</fullName>
    <columns>NAME</columns>
    <columns>Part__c</columns>
    <columns>RMA_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Crm_Complaint_Number__c</columns>
    <columns>SAP_RMA_Number__c</columns>
    <columns>Case__c</columns>
    <columns>NVIDIA_Part_Number__c</columns>
    <columns>Reship_Part_Number__c</columns>
    <columns>Replacement_Serial_Number__c</columns>
    <columns>Shipping_Carrier__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Entitlement__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>1/19/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>RMA_Status__c</field>
        <operation>equals</operation>
        <value>COMP</value>
    </filters>
    <label>All_Temp</label>
    <language>en_US</language>
    <sharedTo>
        <group>Service_Cloud_Admin_Users</group>
    </sharedTo>
</ListView>